--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,39 @@ version: "3.8"
 
 services:
   web:
-    build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: uwsgi --ini=uwsgi.ini
     volumes:
     - ./:/var/www/freemarketapi/
     ports:
-    - 8000:8000
+    - "8000:8000"
     env_file:
       - ./.env
+    depends_on:
+      - db
+
+  nginx:
+    build: ./nginx
+    ports:
+    - "1337:80"
+    depends_on:
+      - web
+
+  db:
+    image: postgres:13.6-bullseye
+    environment:
+      POSTGRES_DB: "django_prod"
+      POSTGRES_USER: "django"
+      POSTGRES_PASSWORD: "prod_django_8734"
+      PGDATA: "/var/lib/postgresql/data/pgdata/"
+    volumes:
+    - postgres_data:/var/lib/postgresql/data/
+
+    ports:
+    - "5432:5432"
+
+volumes:
+  postgres_data:
+
