--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ Django==3.2.12
 djangorestframework~=3.0
 django-cors-headers>3.1
 Pillow~=9.0
+psycopg2==2.9.2
+djangorestframework-simplejwt>=4.3.0
+social-auth-app-django>=4.0
+djoser==2.1.0
+uwsgi==2.0.20
