--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,13 @@
-upstream django_docker {
-    server localhost:8000;
+upstream freemarketapi {
+    server web:8000;
 
 }
 
 server {
     listen 80;
-    large_client_header_buffers 8 64k;
+
     location / {
-        proxy_pass http://localhost;
+        proxy_pass http://freemarketapi;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
