--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,5 +1,9 @@
 [uwsgi]
-chdir = /var/www/freemarketapi/
+
+http = 0.0.0.0:8000
+chdir = /var/www/freemarketapi
 module = FreeMarketApi.wsgi:application
-master = 1
+master = true
 socket = /tmp/freemarketapi.sock
+threads = 2
+processes = 4
